--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 <section
 id="inicio"
   class="relative min-h-screen bg-cover bg-right flex items-center"
-  style="background-image: url('/src/assets/lacelina2e.jpg'); background-position: center; "
+  style="background-image: url('/public/lacelina2r.JPG'); background-position: center; "
 >
   <div class="absolute inset-0 bg-[#234332]/10"></div>
 <div class="absolute inset-0 bg-[radial-gradient(ellipse_at_center,_rgba(35,67,50,0.05)_0%,_rgba(35,67,50,0.6)_80%,_rgba(35,67,50,0.9)_100%)]
