--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,37 +1,47 @@
 <section
-id="inicio"
-  class="relative min-h-screen bg-cover bg-right flex items-center"
-  style="background-image: url('/lacelina2r.JPG'); background-position: center; "
+  id="inicio"
+  class="relative min-h-[50vh] sm:min-h-screen bg-cover bg-no-repeat flex items-center"
+  style="background-image: url('/lacelina2r.JPG'); background-position: 80% center;"
 >
   <div class="absolute inset-0 bg-[#234332]/10"></div>
-<div class="absolute inset-0 bg-[radial-gradient(ellipse_at_center,_rgba(35,67,50,0.05)_0%,_rgba(35,67,50,0.6)_80%,_rgba(35,67,50,0.9)_100%)]
+  <div
+    class="absolute inset-0 bg-[radial-gradient(ellipse_at_center,_rgba(35,67,50,0.05)_0%,_rgba(35,67,50,0.6)_80%,_rgba(35,67,50,0.9)_100%)]"
+  >
+  </div>
 
-"></div>
-
-<div class="absolute bottom-0 left-0 w-full h-40 bg-gradient-to-t from-[#234332] to-transparent pointer-events-none "></div>
+  <div
+    class="absolute bottom-0 left-0 w-full h-40 bg-gradient-to-t from-[#234332] to-transparent pointer-events-none"
+  >
+  </div>
   <div class="relative mx-auto max-w-7xl px-1 sm:px-8 py-16 w-full">
     <div class="w-full sm:w-1/2 text-white animate-fade-in-up px-5">
-      <div class="max-w-max ">
-        <h1 class="text-4xl sm:text-5xl font-extrabold mb-6 leading-tight tracking-tight">
-          Producción y comercialización          agropecuaria
+      <div class="max-w-max">
+        <h1
+          class="text-4xl sm:text-5xl font-extrabold mb-6 leading-tight tracking-tight"
+        >
+          Producción y comercialización agropecuaria
         </h1>
 
-       <p class="text-base sm:text-lg text-slate-200 leading-relaxed max-w-prose mx-auto mb-8">
-  En Agrícola Ganadera Celina SA trabajamos con compromiso, transparencia y eficiencia para brindar soluciones confiables al sector agroindustrial.
-</p>
+        <p
+          class="text-base sm:text-lg text-slate-200 leading-relaxed max-w-prose mx-auto mb-8"
+        >
+          En Agrícola Ganadera Celina SA trabajamos con compromiso,
+          transparencia y eficiencia para brindar soluciones confiables al
+          sector agroindustrial.
+        </p>
 
- <a
-  href="#contacto"
-  class="inline-flex items-center justify-center gap-2
+        <a
+          href="#contacto"
+          class="inline-flex items-center justify-center gap-2
          bg-gradient-to-r from-[#3E7C4C] to-[#5DA46A]
          text-white font-semibold rounded-xl
          px-7 py-3 shadow-lg shadow-[#3E7C4C]/30
          hover:from-[#5DA46A] hover:to-[#7FBA81]
          hover:scale-105 active:scale-95
          transition-all duration-300"
->
-  Contactanos
-</a>
+        >
+          Contactanos
+        </a>
       </div>
     </div>
   </div>
