--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,8 @@
   <meta name="twitter:image" content="/og-image.jpg" />
 
   <!-- Favicon -->
-  <link rel="icon" href="/icon.ico" sizes="any" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" href="/favicon.ico" />
 
   <!-- Fonts -->
   <link
